# adreno-gpu-vulkan-code-sample-framework

./: .gitignore  .gitmodules  01_BuildAndroid.bat  01_Configure.bat  01_Configure.sh  02_Build.bat  02_Build.sh  02_BuildWindows.bat  CONTRIBUTING.md  Config.txt  Configure.py  README.md
framework/: CMakeLists.txt  README.md  build.gradle
framework/android/: AndroidManifest.xml
framework/cmake/: AddShadersDir.cmake  CompileAlias.cmake  CompileShadersHelper.cmake  ExternalDependencies.cmake  KTX-Software.diff  ModelPackager.cmake  TexturePackager.cmake
framework/code/allocator/: threadBufferResource.hpp  threadBufferResourceHelper.hpp  threadManagedBufferResourceAllocator.hpp  threadMonotonicBufferResourceAllocator.hpp
framework/code/animation/: animation.cpp  animation.hpp  animationData.hpp  animationGltfLoader.cpp  animationGltfLoader.hpp  skeleton.cpp  skeleton.hpp  skeletonData.cpp  skeletonData.hpp  skeletonGltfLoader.cpp  skeletonGltfLoader.hpp  skin.cpp  skin.hpp  skinData.cpp  skinData.hpp  skinGltfLoader.cpp  skinGltfLoader.hpp
framework/code/camera/: camera.cpp  camera.hpp  cameraController.cpp  cameraController.hpp  cameraControllerAnim.cpp  cameraControllerAnim.hpp  cameraControllerTouch.cpp  cameraControllerTouch.hpp  cameraData.hpp  cameraGltfLoader.cpp  cameraGltfLoader.hpp
framework/code/dx12/: commandList.cpp  commandList.hpp  descriptorHeapManager.cpp  descriptorHeapManager.hpp  dx12.cpp  dx12.hpp  meshObject.cpp  renderPass.cpp  renderPass.hpp  renderTarget.cpp  renderTarget.hpp
framework/code/graphicsApi/: commandList.hpp  graphicsApiBase.cpp  graphicsApiBase.hpp  pipeline.hpp  renderContext.hpp  renderPass.hpp  renderTarget.hpp
framework/code/gui/: gui.hpp  imguiBase.cpp  imguiBase.hpp  imguiDx12.cpp  imguiDx12.hpp  imguiPlatform.hpp  imguiVulkan.cpp  imguiVulkan.hpp
framework/code/helper/: postProcess.hpp  postProcessSMAA.cpp  postProcessSMAA.hpp  postProcessStandard.cpp  postProcessStandard.hpp  zbufferReduce.cpp  zbufferReduce.hpp
framework/code/light/: light.cpp  light.hpp  lightData.hpp  lightGltfLoader.cpp  lightGltfLoader.hpp  lightList.cpp  lightList.hpp  lightListGui.cpp  lightListGui.hpp  lightLoader.cpp  lightLoader.hpp
framework/code/main/: applicationEntrypoint.hpp  applicationHelperBase.cpp  applicationHelperBase.hpp  applicationHelperBaseDx12.cpp  applicationHelperBaseDx12.hpp  frameworkApplicationBase.cpp  frameworkApplicationBase.hpp  framework_static_empty.cpp
framework/code/material/: computable.cpp  computable.hpp  descriptorSetDescription.hpp  descriptorSetLayout.cpp  descriptorSetLayout.hpp  drawable.cpp  drawable.hpp  drawableLoader.cpp  drawableLoader.hpp  material.cpp  material.hpp  materialManager.cpp  materialManager.hpp  materialManagerT.hpp  materialPass.hpp  materialProps.cpp  materialProps.h  materialShaderDefinition.cpp  materialShaderDefinition.hpp  materialT.hpp  pipeline.hpp  pipelineLayout.cpp  pipelineLayout.hpp  pipelineVertexInputState.cpp  pipelineVertexInputState.hpp  shader.cpp  shader.hpp  shaderDescription.cpp  shaderDescription.hpp  shaderManager.cpp  shaderManager.hpp  shaderManagerT.hpp  shaderModule.cpp  shaderModule.hpp  specializationConstantDescription.hpp  specializationConstants.hpp  specializationConstantsLayout.hpp  vertexDescription.cpp  vertexDescription.hpp  vertexFormat.hpp
framework/code/memory/: androidHardwareBuffer.cpp  androidHardwareBuffer.hpp  buffer.hpp  bufferObject.cpp  bufferObject.hpp  drawIndirectBuffer.hpp  drawIndirectBufferObject.cpp  drawIndirectBufferObject.hpp  indexBuffer.hpp  indexBufferObject.cpp  indexBufferObject.hpp  memory.hpp  memoryManager.cpp  memoryManager.hpp  memoryMapped.hpp  uniform.hpp  vertexBuffer.hpp  vertexBufferObject.cpp  vertexBufferObject.hpp
framework/code/mesh/: instanceGenerator.cpp  instanceGenerator.hpp  mesh.hpp  meshHelper.cpp  meshHelper.hpp  meshIntermediate.cpp  meshIntermediate.hpp  meshLoader.cpp  meshLoader.hpp  meshObjectIntermediate.cpp  meshObjectIntermediate.hpp  octree.cpp  octree.hpp
framework/code/rayTracing/: accelerationStructure.hpp
framework/code/shadow/: shadow.cpp  shadow.hpp  shadowVsm.cpp  shadowVsm.hpp  shadowVulkan.cpp  shadowVulkan.hpp
framework/code/system/: Worker.cpp  Worker.h  assetManager.hpp  config.cpp  config.h  containers.cpp  containers.h  crc32c.hpp  glm_common.hpp  math_common.hpp  os_common.cpp  os_common.h  profile.cpp  profile.h  timer.cpp  timer.hpp
framework/code/texture/: loaderKtx.cpp  loaderKtx.hpp  loaderPpm.cpp  loaderPpm.hpp  sampler.cpp  sampler.hpp  texture.hpp  textureFormat.cpp  textureFormat.hpp  textureManager.cpp  textureManager.hpp
framework/code/vulkan/: MeshObject.cpp  MeshObject.h  TextureFuncts.cpp  TextureFuncts.h  VK_QCOM_render_pass_transform.h  commandBuffer.cpp  commandBuffer.hpp  extension.cpp  extension.hpp  extensionHelpers.cpp  extensionHelpers.hpp  extensionLib.cpp  extensionLib.hpp  framebuffer.cpp  framebuffer.hpp  refHandle.hpp  refHandleDestroyFuncs.hpp  renderContext.cpp  renderContext.hpp  renderPass.cpp  renderPass.hpp  renderTarget.cpp  renderTarget.hpp  semaphore.cpp  semaphore.hpp  timerPool.cpp  timerPool.hpp  timerSimple.cpp  timerSimple.hpp  vulkan.cpp  vulkan.cpp.debug  vulkan.hpp  vulkan.hpp.debug  vulkanDebugCallback.cpp  vulkanDebugCallback.hpp  vulkan_support.cpp  vulkan_support.hpp
framework/code/vulkanRT/: accelerationInstanceBufferObject.cpp  accelerationInstanceBufferObject.hpp  accelerationStructure.cpp  accelerationStructure.hpp  extensionHelpersRT.hpp  extensionLibRT.hpp  meshObjectRT.cpp  meshObjectRT.hpp  meshUpdateRT.cpp  meshUpdateRT.hpp  sceneRT.cpp  sceneRT.hpp  (+4 more)
framework/schema/: lightsSchema.json  shaderAliasSchema.json  shaderSchema.json  tcb_span.natvis
project/tools/: .gitignore  CMakeLists.txt  build.bat  build.sh  clean.bat
project/windows/: .gitignore  CMakeLists.txt  CmakePresets.json  README.txt  build.bat  buildArm64.bat  buildClang.bat  buildClangArm64.bat  clean.bat
tests/: CMakeLists.txt
tests/empty/: CMakeLists.txt
tests/framework_test_vulkan/: CMakeLists.txt  README.md  app_config.txt
(+539 files in other folders)
